--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 ---
 
 I'm currently a Ph.D. student in Computer Sciences at the University of Cincinnati. My advisors are Dr. Anil Jegga and Dr. Ali A. Minai. My research interests are in graph neural networks, knowledge representation learning, and computational drug discovery. 
